--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cookie-parser": "~1.4.4",
     "cookies": "^0.8.0",
     "debug": "~2.6.9",
@@ -14,6 +15,9 @@
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "session": "^0.1.0"
+    "sequelize": "^6.28.0",
+    "sequelize-cli": "^6.5.2",
+    "session": "^0.1.0",
+    "sqlite3": "^5.1.4"
   }
 }
