DB working but there is still work to do (handle with user access, etc..).

--- a/config/config.json
+++ b/config/config.json
@@ -5,9 +5,10 @@
   },
   "test": {
     "dialect": "sqlite",
-    "storage": ":memory" },
+    "storage": ":memory"
+  },
   "production": {
-    "dialect": "sqlite",
-    "storage": "./database.sqlite3"
+      "dialect": "sqlite",
+      "storage": "./database.sqlite3"
   }
 }
